@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Remove deprecated function.
+Nicolas Weeger 2010-08-01
+
 Fix knowledge for recipes not displaying the required cauldron.
 Nicolas Weeger 2010-08-01
 
